<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/condition_1_1" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="1) √" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_price_layout"
                style="@style/edit_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/input2"

                    app:met_floatingLabel="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textSize="20sp"
                android:id="@+id/textView222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="=" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/edit_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="start"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/input3" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="2)" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_price_layou2t2"
                style="@style/edit_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:gravity="start"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/input4"

                    app:met_floatingLabel="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:text="/" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_price_layou2t"
                style="@style/edit_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="7"
                    android:gravity="start"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/input5"
                    app:met_floatingLabel="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="=" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/edit_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start"

                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/enter" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:text="" />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/condition_1_2" />
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio2A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio1_2_1" />

        <RadioButton
            android:id="@+id/radio2B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1_2_2"/>
    </RadioGroup>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:inputType="numberDecimal"
                android:nextFocusDown="@id/input2"

                app:met_floatingLabel="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="(±" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="numberDecimal"
                android:nextFocusDown="@id/input3" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text=" )" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/enter" />




    <TextView
        android:visibility="gone"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:text="" />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/condition_1_3" />
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio3A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio1_2_1" />

        <RadioButton
            android:id="@+id/radio3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1_2_2"/>
    </RadioGroup>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:inputType="numberDecimal"
                android:nextFocusDown="@id/input2"

                app:met_floatingLabel="normal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/enter" />




    <TextView
        android:visibility="gone"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
    <TextView
        android:visibility="gone"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>